--- a/StudentManagement.UI/Views/Student/ShowAllStudents.cshtml
+++ b/StudentManagement.UI/Views/Student/ShowAllStudents.cshtml
@@ -7,7 +7,7 @@
 <script src="~/Scripts/Webbase/ConstantValues.js"></script>
 <script src="~/Scripts/Student/Student.js"></script>
 
-<h2>Student List</h2>
+<h2>StudentsList</h2>
 
 <table>
     <thead>
